# master_thesis

./: .gitignore  .gitmodules  LICENSE  README.md  build_log.txt  install.sh  setup.sh
evaluatefis/: buildInfo.mat  compileInfo.mat  evaluatefis.c  evaluatefis_initialize.c  rtGetInf.c  rtGetNaN.c  rt_nonfinite.c
evaluatefis/examples/: main.c
evaluatefis/include/: evaluatefis_initialize.h  evaluatefis_types.h  rtGetInf.h  rtGetNaN.h  rtwtypes.h
evaluatefis/interface/: _coder_evaluatefis_api.h  _coder_evaluatefis_info.c  _coder_evaluatefis_info.h  _coder_evaluatefis_mex.c  _coder_evaluatefis_mex.h
src/evaluatefis/: .MATLABDriveTag  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  evaluatefis.c  evaluatefis.h  evaluatefis_data.h  evaluatefis_initialize.c  evaluatefis_initialize.h  evaluatefis_rtw.mk  evaluatefis_terminate.c  evaluatefis_terminate.h  evaluatefis_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  trapmf.c  trimf.c
src/evaluatefis/examples/: .MATLABDriveTag  main.c  main.h
src/evaluatefis/html/: .MATLABDriveTag  report.mldatx
src/evaluatefis/include/: .MATLABDriveTag  evaluatefis.h  evaluatefis_data.h  evaluatefis_initialize.h  evaluatefis_terminate.h  evaluatefis_types.h  rtGetInf.h  rtGetNaN.h  rt_nonfinite.h  rtwtypes.h  trapmf.h  trimf.h
src/evaluatefis/interface/: .MATLABDriveTag  _coder_evaluatefis_api.c  _coder_evaluatefis_api.h  _coder_evaluatefis_info.c  _coder_evaluatefis_info.h  _coder_evaluatefis_mex.c  _coder_evaluatefis_mex.h
src/go1_locomotion/: CMakeLists.txt  package.xml
src/go1_locomotion/include/: kinematics.h  utils.h
src/go1_locomotion/launch/: gazebo.launch  locomotion.launch
src/go1_locomotion/src/: kinematics.cpp  main.cpp  utils.cpp
src/go1_mud_test/: CMakeLists.txt  package.xml
src/go1_mud_test/bagfiles/average_pid_2_data/: 2023-11-25-19-26-36.bag  2023-11-25-19-28-11.bag  2023-11-25-19-31-56.bag  2023-11-25-19-33-20.bag
src/go1_mud_test/bagfiles/average_pid_data/: 2023-11-24-11-25-08.bag  2023-11-24-11-26-21.bag  2023-11-24-11-27-46.bag
src/go1_mud_test/bagfiles/hard_pid_2_data/: 2023-11-25-20-47-18.bag  2023-11-25-20-49-17.bag  2023-11-25-20-54-05.bag  2023-11-25-20-57-54.bag  2023-11-25-21-00-07.bag
src/go1_mud_test/bagfiles/hard_pid_data/: 2023-11-24-11-31-25.bag  2023-11-24-11-32-38.bag  2023-11-24-11-33-57.bag
src/go1_mud_test/bagfiles/soft_pid_2_data/: 2023-11-25-20-16-48.bag  2023-11-25-20-19-41.bag  2023-11-25-20-24-14.bag  2023-11-25-20-26-26.bag
src/go1_mud_test/bagfiles/soft_pid_data/: 2023-11-24-11-36-20.bag  2023-11-24-11-37-56.bag  2023-11-24-11-39-07.bag
src/go1_mud_test/behavior_trees/: mud_test.xml
src/go1_mud_test/config/: controller_outlook.xml  go1.rviz  physical_plotjuggler.xml  plotjuggler.xml  simulation_plotjuggler.xml
src/go1_mud_test/include/: actionServer.hpp  actionServiceManager.hpp  baseAction.hpp  config.hpp  controller.hpp  controllerServiceManager.hpp  hardware.hpp  mudTest.hpp  mudTestActions.hpp  mudTestConditions.hpp  robotActionController.hpp  robotActions.hpp  rosInterfaceManager.hpp
src/go1_mud_test/launch/: gazebo.launch  mud_test.launch
src/go1_mud_test/msg/: ControllerData.msg
src/go1_mud_test/notebook/: fuzzy_tuning_analysis.ipynb
src/go1_mud_test/scripts/: controller_data_analysis.py  force_sensor_node.py
src/go1_mud_test/src/: actionServer.cpp  actionServiceManager.cpp  controller.cpp  controllerServiceManager.cpp  hardware.cpp  mudTest.cpp  mudTestActions.cpp  mudTestConditions.cpp  mudTestNode.cpp  robotActionController.cpp  robotActions.cpp  rosInterfaceManager.cpp
src/go1_mud_test/srv/: ActionService.srv  ControllerService.srv  ControllerTypeService.srv  PIDTuningService.srv
src/go1_web_interface/: CMakeLists.txt  package.xml
src/go1_web_interface/client/: package-lock.json  package.json  tailwind.config.js
src/go1_web_interface/client/src/: App.jsx  index.html  index.js
src/go1_web_interface/client/src/components/: Alert.jsx  CallToActionBtn.jsx  Card.jsx  ConnectedRoutes.jsx  Header.jsx  QuickAction.jsx  Tab.jsx
src/go1_web_interface/client/src/config/: index.js
src/go1_web_interface/client/src/context/: ROSContext.jsx
src/go1_web_interface/client/src/hooks/: useROS.jsx
src/go1_web_interface/client/src/layout/: ControlPage.jsx
src/go1_web_interface/client/src/pages/: ControlPage.jsx  LoginPage.jsx
src/go1_web_interface/client/src/pages/config/: index.js
src/go1_web_interface/launch/: app.launch
src/unitree_legged_sdk/: CMakeLists.txt
src/unitree_ros/go1_description/xacro/: gazebo.xacro  robot.xacro
src/unitree_ros/unitree_legged_control/: CMakeLists.txt
src/unitree_ros_to_real/unitree_legged_real/: CMakeLists.txt  package.xml
src/unitree_ros_to_real/unitree_legged_real/src/exe/: ros_udp.cpp
