<?xml version="1.0"?>
<package format="2">
  <name>go1_mud_test</name>
  <version>0.0.1</version>
  <description>The go1_mud_test package</description>

  <maintainer email="fegaeze@gmail.com">Chioma Nkem-Eze</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>unitree_gazebo</depend>
  <depend>unitree_legged_msgs</depend>

</package>
