<?xml version="1.0"?>
<package format="2">
  <name>go1_mud_test</name>
  <version>0.0.1</version>
  <description>The go1_mud_test package</description>

  <maintainer email="fegaeze@gmail.com">Chioma Nkem-Eze</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>behaviortree_cpp</depend>
  <depend>roscpp</depend>

  <exec_depend>message_runtime</exec_depend>
  <build_depend>message_generation</build_depend>

  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>tf</depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <depend>go1_web_interface</depend>
  <depend>unitree_legged_msgs</depend>
</package>
