<?xml version="1.0"?>
<package format="2">
  <name>go1_web_interface</name>
  <version>0.0.0</version>
  <description>The go1_web_interface package</description>
  
  <maintainer email="fegaeze@gmail.com">Chioma NKem-Eze</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rosbridge_suite</depend>
</package>
